# frcobot_ros2

fairino10_v6_moveit2_config/: package.xml
fairino16_v6_moveit2_config/: package.xml
fairino20_v6_moveit2_config/: package.xml
fairino30_v6_moveit2_config/: package.xml
fairino3_v6_moveit2_config/: package.xml
fairino3mt_v6_moveit2_config/: package.xml
fairino5_v6_moveit2_config/: package.xml
fairino_description/urdf/: fairino20_v6.urdf
fairino_hardware/: CMakeLists.txt  package.xml
fairino_hardware/libfairino/lib/: libfairino.so.2
fairino_mtc_demo/: package.xml
fairino_mtc_demo/launch/: mtc_demo_app.launch.py  mtc_demo_env.launch.py
fairino_mtc_demo/src/: mtc_node.cpp
